[tool.poetry]
name = "asmac_backend"
version = "0.0.1"
description = "metadata system for active objects"
authors = ["Alejandro de la Rosa Zequeira"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.12,<3.11.0"
axo =   ">=0.0.3a0"
zmp = "^6.9"
zmq = "^0.0.0"
mpu = "^0.23.1"
mictlanx = ">=0.0.16"
pymongo = "^4.13.2"
logger = "^1.4"
fastapi = "^0.116.1"
pyzmq = ">=26.0.3,<27.0.0"
pytest = "^8.4.1"
pandas = "^2.3.1"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "supplemental"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
